[tool.poetry]
name = "coresets"
version = "0.1.0"
description = "Coreset generation for k-Means and (Bayesian) Gaussian mixture models"
authors = [
    "Zalán Borsos <zalan.borsos@inf.ethz.ch>",
    "Alexander Shtuchkin <ashtuchkin@gmail.com>"
]
repository = "https://github.com/ashtuchkin/coresets"
license = "BSD-3-Clause"
readme = "readme.md"
packages = [
    { include = "coresets" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.0"
numpy = "^1.14"

[tool.poetry.group.dev.dependencies]
pytest = "^7"
pybind11 = ">=2.8.0"
matplotlib = ">=3.7.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
    "poetry-core>=1.1.0",
    "setuptools",
    "pybind11>=2.8.0",
]
